9.17.0
-----
release: 10 March 2016

9.16.0
-----
release: 03 February 2016

9.15.0
-----
release: 02 February 2016

- NOT RELEASED

9.14.0
-----
release: 03 December 2015

9.13.0
-----
release: 15 October 2015

9.12.0
-----
release: 25 September 2015

9.11.0
-----
release: 28 August 2015

9.10.0
-----
release: 27 July 2015

9.9.0
-----
release: 22 June 2015

- Add output language support in scrooge-sbt-plugin

9.8.0
-----
release: 12 April 2015

- bumped dependency versions
- added /admin/registry.json endpoint for exporting runtime configuration

9.6.3
-----
release: 30 October 2014

- bump util to 6.22.2-SNAPSHOT

9.6.1
-----
release: 24 October 2014

- bump util to 6.22.2-SNAPSHOT
- bump ostrich_2.10 to 9.6.1-SNAPSHOT

9.6.0
-----
release: 13 October 2014

- bump util to 6.22.0
- ostrich: Change the underlying httpServer executor to a multi-threaded one

9.5.6
-----
release: 05 August 2014

- bump util to 6.19.0

9.5.5
-----
release: 31 July 2014

- bump util to 6.18.4

9.5.4
-----
release: 24 July 2014

- bump util to 6.18.2

9.5.3
-----
release: 08 July 2014

- release util v6.18.1

9.5.2
-----
release: 23 June 2014

- release util v6.18.0

9.5.1
-----
release: 04 June 2014

- Updated depencency versions. No code changes.

9.5.0
-----
release: 29 April 2014

- release util version 6.15.0
- Add System.exit to the end of abortabortabort

9.4.2
-----
release: 24 March 2014

- release util version 6.13.2

9.4.1
-----
release: 20 March 2014

- release util version 6.13.1
- Add JVM compilation and class loading stats

9.4.0
-----
release: 14 March 2014

- release util version 6.13.0

9.3.1
-----
release: 18 February 2014

- release util version 6.12.1

9.3.0
-----
release: 14 February 2014

- release util version 6.12.0

9.2.1
-----
release: 15 November 2013

- Upgrade util version to 6.8.1
- ostrich & twitter-server: jvm ByteBuffer pool stats

9.2.0
-----
release: 12 November 2013

- ostrich: remove boxing from Histogram's primary call, add()

9.1.3
-----