@@ -1,3 +1,5 @@
+- Register Ostrich as a Library in the /admin/registry.json. ``RB_ID=825129``
+
 9.17.0
 -----
 release: 10 March 2016
